syntax = "proto3";

package auth_v1;


option go_package = "GolandProjects/MicroservicesEducation/MyProject/auth/pkg/auth_v1;auth_v1";

import "google/api/annotations.proto";

service AuthV1{
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetRefreshToken(GetRefreshTokenRequest) returns (GetRefreshTokenResponse){
    option (google.api.http) = {
      get: "/auth/v1/get-refresh-token"
    };
  };
  rpc GetAccessToken(GetAccessTokenRequest) returns (GetAccessTokenResponse){
    option (google.api.http) = {
      get: "/auth/v1/get-access-token"
    };
  };

}


message LoginRequest{
  string email = 1;
  string password = 2;
}

message LoginResponse{
  string access_token = 1;
  string refresh_token = 2;
}

message GetRefreshTokenRequest{
  string old_refresh_token = 1;
}

message GetRefreshTokenResponse{
  string refresh_token = 1;
}

message GetAccessTokenRequest{
  string refresh_token = 1;
}

message GetAccessTokenResponse{
  string access_token = 1;
  string refresh_token = 2;
}




